--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,14 @@
 
     <!-- SEO Meta Tags -->
     <title>Routiner: Habit Tracker & Task Manager</title>
-    <meta name="description" content="Routiner helps you build habits, track your progress, and stay consistent with an intuitive dashboard and insightful reports." />
-    <meta name="keywords" content="Habit Tracker, Productivity App, Daily Planner, Task Manager, Routiner, Streaks, Goals, Routine App" />
+    <meta
+      name="description"
+      content="Routiner helps you build habits, track your progress, and stay consistent with an intuitive dashboard and insightful reports."
+    />
+    <meta
+      name="keywords"
+      content="Habit Tracker, Productivity App, Daily Planner, Task Manager, Routiner, Streaks, Goals, Routine App"
+    />
     <meta name="author" content="Routiner Team" />
 
     <!-- PWA & Theming -->
@@ -18,19 +24,43 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <!-- Open Graph (Social Sharing) -->
-    <meta property="og:title" content="Routiner: Habit Tracker & Task Manager" />
-    <meta property="og:description" content="Track habits, stay consistent, and build better routines with Routiner." />
+    <meta
+      property="og:title"
+      content="Routiner: Habit Tracker & Task Manager"
+    />
+    <meta
+      property="og:description"
+      content="Track habits, stay consistent, and build better routines with Routiner."
+    />
     <meta property="og:image" content="%PUBLIC_URL%/banner.png" />
     <meta property="og:url" content="https://yourdomain.com" />
     <meta property="og:type" content="website" />
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-..."
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
+    <!-- ADS -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3405064387458435"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
